--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
-  "type": "module",
+	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node index.js",
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.1",
+		"concurrently": "^6.4.0",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"express-async-handler": "^1.2.0",
