--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@mui/icons-material": "^5.2.5",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.1",
 		"concurrently": "^6.4.0",
